# hackaton_5

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
config/: app.py  initializers.py  routers.py  settings.py
src/utd/: models.py
src/utd/api/: __init__.py  video.py
src/utd/schemas/: files.py
