[tool.poetry]
name = "Unauthorized trade detection"
version = "0.1.0"
description = ""
authors = ["Kirill Medvedko <optikrus61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic-settings = "^2.0.3"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
minio = "^7.1.17"
opencv-python = "^4.8.1.78"
pillow = "^10.1.0"
ultralytics = "^8.0.208"
opencv-python-headless = "^4.8.1.78"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
black = "^23.10.1"

[tool.ruff]
target-version = "py311"
src = ["src"]
exclude = ["venv*"]
ignore = ["D", "ANN10", "RUF001", "RUF012", "FIX", "TD002", "TD003"]
select = ["ALL"]
unfixable = ["E711", "E712"]
line-length = 100

[tool.ruff.pylint]
max-args = 6

[tool.ruff.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
